# tinyc

./: CMakeLists.txt  README.md  tinyc_frontend
tinyc/: ast.cpp  ast.h  ast_old.cpp  frontend.cpp  frontend.h  il.cpp  il.h  parser.cpp  parser.h  tinyC Language Reference.md  tvlm_frontend.cpp  tvlm_frontend.h  typechecker.cpp  typechecker.h  types.h
tinyc/tests/: 1.1integerPtr.tc  1.2Ginteger.tc  1.3integerLoop.tc  10switch.tc  11playground.tc  12fncCall.tc  13spilling.c  13spilling.tc  14doubleArray.tc  15.1structPtrCall.tc  15.2structPtrNestedCall.tc  15structCall.tc  16fncPtrs.tc  17DoublesCmp.tc  18WhileAlloc.tc  19ptrArg.tc  1integer.tc  20binLogicOp.tc  2double.tc  3.1helloWorldGlobal.tc  3helloWorld.tc  3helloWorldGlobal.tc  4.1struct.tc  4.2structGorL.tc  4struct.tc  5if.tc  6fact.tc  7io.tc  8printfact.tc  9while.tc  Ainlining.tc  BconstantPropagation.tc
tinyc/tests/outputs/: 10.out  20.out  20a.out  8.out  A.out
